--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab6 Simonov</title>
+    <title>Lab10 Simonov</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
     <body>
         <div class="content">
-            
+            <div class="lamp">
+                <img src="/images/lamp.png"/>
+                <div class="hang">
+                    <div class="hang-wire"></div>
+                    <div class="hang-ball"></div>
+                </div>
+            </div>
+            <div class="scene hidden">
+                <div class="mage">
+                    <img src="/images/mage.jpg"/>
+                </div>
+                <div class="rabbit pull-out">
+                    <img src="/images/rabbit.png"/>
+                </div>
+                <div class="pigeon put-in">
+                    <img src="/images/pigeon.png"/>
+                </div>
+                <div class="hat">
+                    <img src="/images/hat.png"/>
+                </div>
+                <div class="light"></div>
+            </div>
+            <div class="curtain"></div>
         </div>
     </body>
     <script src="js/main.js"></script>
